Sponsors kinda done
Signed-off-by: Petar Ivankovic Milosevic <petar.imilosevic@pm.me>

--- a/sponsors.html
+++ b/sponsors.html
@@ -15,12 +15,97 @@
   <div class="box">
     <div id="title">
       <h1>Our beloved sponsors</h1>
-      <h3>Updated shiny page coming soon!</h3>
     </div>
-    <p>
-    Due to budget constraints, this page is being made with the least effort possible.<br/> Of course no one is actually paying me to make it or maintain it, so I guess it's not really a constraint. But I'm lazy.<br/><strong>So here's a list of our sponsors:</strong>
-    </p>
-    <img src="sponzori.png" alt="Sponsors">
+    <div class="flexyfill">
+      <div class="filling">
+        <a href="https://www.8openings.de/en" target="_blank" rel="noopener">
+          <img src="pngs/8oop.png" alt="80OPENINGS">
+        </a>
+        <a href="https://www.academyofhistoricalarts.co.uk/" target="_blank" rel="noopener">
+          <img src="pngs/academy-of-historical-arts.png" alt="ACADEMY OF HISTORICAL ARTS">
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=61575043574679" target="_blank" rel="noopener">
+          <img src="pngs/anonhema.png" alt="ANONHEMA" >
+        </a>
+        <a href="https://armstreet.com/" target="_blank" rel="noopener">
+          <img src="pngs/armstreet.png" alt="ARMSTREET" >
+        </a>
+      </div>
+      <div class="filling">
+        <a href="https://bellatore.red/" target="_blank" rel="noopener">
+          <img src="pngs/Bellatore.png" alt="BELLATORE">
+        </a>
+        <a href="https://www.facebook.com/chornavatra" target="_blank" rel="noopener">
+          <img src="pngs/chorna.png" alt="CHORNA VATRA">
+        </a>
+        <a href="https://www.destrezania.com/" target="_blank" rel="noopener">
+          <img src="pngs/Destrezania.png" alt="DESTREZANIA">
+        </a>
+        <a href="https://deusvult.es/" target="_blank" rel="noopener">
+          <img src="pngs/deusvult.png" alt="DEUSVULT">
+        </a>
+      </div>
+      <div class="filling">
+        <a href="https://www.fabri-armorum.com/" target="_blank" rel="noopener">
+          <img src="pngs/FabriArmorum.png" alt="FABRI ARMORUM">
+        </a>
+        <a href="https://www.fallenrookpublishing.co.uk/" target="_blank" rel="noopener">
+          <img src="pngs/FallenRook.png" alt="FALLEN ROOK PUBLISHING">
+        </a>
+        <a href="https://go-now.pl/en/sports-equipment-go-now/" target="_blank" rel="noopener">
+          <img src="pngs/go-now.png" alt="GO-NOW">
+        </a>
+        <a href="https://www.hemabookshelf.com/" target="_blank" rel="noopener">
+          <img src="pngs/hema-bookshelf.png" alt="HEMA BOOKSHELF">
+        </a>
+      </div>
+      <div class="filling">
+        <a href="https://www.theknightshop.com/" target="_blank" rel="noopener">
+          <img src="pngs/HemaShop.png" alt="KNIGHTSHOP">
+        </a>
+        <a href="https://malleusmartialis.com/" target="_blank" rel="noopener">
+          <img src="pngs/MalleusMartialis.png" alt="MALLEUS MARTIALIS">
+        </a>
+        <a href="https://zmda.hr/" target="_blank" rel="noopener">
+          <img src="pngs/Muzej.png" alt="ZAVICAJNI MUZEJ GRADA DARUVARA">
+        </a>
+        <a href="https://northarmoury.ca/" target="_blank" rel="noopener">
+          <img src="pngs/NORTHARMOURY.png" alt="NORTH ARMOURY">
+        </a>
+      </div>
+      <div class="filling">
+        <a href="https://shop.pbtfencing.com/webshop/more-6/historical-fencing-34" target="_blank" rel="noopener">
+          <img src="pngs/PBThistorical.png" alt="PBT HISFENCING">
+        </a>
+        <a href="https://www.woodenswords.com/" target="_blank" rel="noopener">
+          <img src="pngs/purpleheart-armory.png" alt="PURPLE HEART ARMORY">
+        </a>
+        <a href="https://regenyei.com/" target="_blank" rel="noopener">
+          <img src="pngs/Regenyei.png" alt="REGENYEI">
+        </a>
+        <a href="https://sigiforge.com/" target="_blank" rel="noopener">
+          <img src="pngs/Sigi.png" alt="SIGI">
+        </a>
+      </div>
+      <div class="filling">
+        <a href="https://sparringglove.com/" target="_blank" rel="noopener">
+          <img src="pngs/Sparringgloves.png" alt="SPARRING GLOVE">
+        </a>
+        <a href="https://histfenc.eu/en/" target="_blank" rel="noopener">
+          <img src="pngs/SPES-bw.png" alt="SPES">
+        </a>
+        <a href="https://steel-mastery.com/hema" target="_blank" rel="noopener">
+          <img src="pngs/steel-mastery.png" alt="STEEL MASTERY">
+        </a>
+        <a href="https://swordgear.com/" target="_blank" rel="noopener">
+          <img src="pngs/sword-gear.png" alt="SWORDGEAR">
+        </a>
+      </div>
+      <div class="filling">
+        <a href="https://woo.zwaardenvolk.nl/en/" target="_blank" rel="noopener">
+          <img src="pngs/ZwaardEnVolk.png" alt="ZVAARD EN VOLK">
+        </a>
+      </div>
+    </div>
   </div>
-
 </body>
