update page meta image and og:stuff
Signed-off-by: Petar Ivankovic Milosevic <petar.imilosevic@pm.me>

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia. See all the necessary tournament info in one place.">
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://steelnchill.com" />
-<meta property="og:image" content="https://steelnchill.com/lazerlichty.png" />
+<meta property="og:image" content="https://steelnchill.com/pngs/hemakun.png" />
 <meta property="og:title" content="Steel and Chill 2025" />
 <meta property="og:description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia. See all the necessary tournament info in one place." />
 <title>Steel and Chill 2025</title>
