--- a/rules.html
+++ b/rules.html
@@ -6,7 +6,13 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap" rel="stylesheet">
-
+<meta name="description" content="Greatest HEMA tournament rules in the world being upheld in Daruvar, Croatia. See all the rules in one place.">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://steelnchill.com/sponsors.html" />
+<meta property="og:image" content="https://steelnchill.com/pngs/hemakun.png" />
+<meta property="og:title" content="Sponsors and Chill 2025" />
+<meta property="og:description" content="Greatest HEMA tournament rules in the world being upheld in Daruvar, Croatia. See all the rules in one place." />
+<title>Sponsors and Chill 2025</title>
 </head>
 <body>
   <span id="background">
