--- a/schedule.html
+++ b/schedule.html
@@ -20,14 +20,14 @@
     rel="stylesheet"
   />
 
-  <meta property="og:url" content="https://steelnchill.com" />
-  <meta property="og:image" content="https://steelnchill.com/lazerlichty.png" />
-  <meta property="og:title" content="Steel and Chill 2025" />
+  <meta property="og:url" content="https://steelnchill.com/schedule.html" />
+  <meta property="og:image" content="https://steelnchill.com/pngs/hemakun.png" />
+  <meta property="og:title" content="Schedule and Chill 2025" />
   <meta
     property="og:description"
-    content="Greatest HEMA tournament in the world being held in Daruvar, Croatia on June 21st and 22nd. See all the necessary tournament info in one place."
+    content="Schedule for the greatest HEMA tournament in the world being held in Daruvar, Croatia. See all the necessary tournament info in one place."
   />
-  <title>Steel and Chill 2025</title>
+  <title>Schedule and Chill 2025</title>
   <link rel="icon" type="image/x-icon" href="./favicon.png" />
 </head>
 <body>
