--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 
-<meta property="og:url" content="https://steelnchill.com" />
-<meta property="og:image" content="https://steelnchill.com/lazerlichty.png" />
+<meta property="og:url" content="https://steelnchill.com/about.html" />
+<meta property="og:image" content="https://steelnchill.com/pngs/hemakun.png" />
 <meta property="og:title" content="Steel and Chill 2025" />
-<meta property="og:description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia on June 21st and 22nd. See all the necessary tournament info in one place." />
+<meta property="og:description" content="Greatest HEMA tournament in the world being held in Daruvar, Croatia. See all the necessary tournament info in one place." />
 <title>Steel and Chill 2025</title>
 <link rel="icon" type="image/x-icon" href="./favicon.png">
 
