--- a/sponsors.html
+++ b/sponsors.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Greatest HEMA tournament sponsors in the world being shown in Daruvar, Croatia. See all the sponsors in one place.">
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://steelnchill.com/sponsors.html" />
-<meta property="og:image" content="https://steelnchill.com/lazerlichty.png" />
+<meta property="og:image" content="https://steelnchill.com/pngs/hemakun.png" />
 <meta property="og:title" content="Sponsors and Chill 2025" />
 <meta property="og:description" content="Greatest HEMA tournament sponsors in the world being shown in Daruvar, Croatia. See all the sponsors in one place." />
 <title>Sponsors and Chill 2025</title>
