update schedule and index
Signed-off-by: Petar Ivankovic Milosevic <petar.imilosevic@pm.me>

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 </div>
-  <script>
+<script>
   //I hate both myself and Apple for forcing me to place this filth in my pure HRML but here we are
   // Check the user agent
   var userAgent = navigator.userAgent.toLowerCase();
@@ -70,14 +70,14 @@
     </div>
     </div>
     <div class="infobubble">
-      <!--<a href="/schedule.html">
+      <a href="/schedule.html">
       <div class="about">
         <h3><strong>Schedule</strong></h3>
       </div>
-      </a>-->
+      </a>
       <div class="about">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIuNRfv1K3MlcBNpqo6edDTSNZEX2IUNTmRJKFOcv_2F1B-w/viewform">
-      <h3>Registration sheet</h3>
+      <!--<a href="https://docs.google.com/forms/d/e/1FAIpQLSfIuNRfv1K3MlcBNpqo6edDTSNZEX2IUNTmRJKFOcv_2F1B-w/viewform">
+      <h3>Registration sheet</h3>-->
       </div>
       <a href="/about.html">
       <div class="about">
