--- a/schedule.html
+++ b/schedule.html
@@ -34,10 +34,11 @@
   <meta name="viewport" content="width=device-width">
 
   <div>
-    <div id="background">
       <div class="container">
         <div class="header">
           <h1>Tournament schedule</h1>
+          <p>Note: prone to slight delays(HEMA standard time)</p>
+
         </div>
         <div class="content">
           <style>
@@ -73,65 +74,43 @@
             }
           </style>
           <table>
-            <tr>
-              <th>Date</th>
-              <th>Start Time</th>
-              <th>Event</th>
-            </tr>
-            <tr>
-              <td>Saturday 20.07.</td>
-              <td>07:00</td>
-              <td>Registrations and gear check for Sidesword and S&amp;B</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>08:00</td>
-              <td>Sidesword tournament (24/4 rings)</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>11:00</td>
-              <td>S&amp;B tournament (24/4 rings)</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>14:00</td>
-              <td>Sidesword and S&amp;B winners announcement</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>14:30</td>
-              <td>Free time, spa, free sparing and stuff</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>20:00</td>
-              <td>Afterparty</td>
-            </tr>
-            <tr>
-              <td>Sunday 21.07.</td>
-              <td>07:00</td>
-              <td>Registrations and gear check for LSO and LSW</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>08:00</td>
-              <td>LSW tournament (12/2 rings)</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>11:00</td>
-              <td>LSO tournament (36/4 rings)</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>16:00</td>
-              <td>LSW and LSO winners announcement and closing ceremony</td>
-            </tr>
+            <thead>
+              <tr>
+                <th>Day</th>
+                <th>Time</th>
+                <th>Event</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr><td rowspan="10">Day 1</td><td>07:00</td><td>Registrations and gear-check</td></tr>
+              <tr><td>08:00</td><td>Open sidesword pools start</td></tr>
+              <tr><td>09:30</td><td>Open sidesword eliminations start</td></tr>
+              <tr><td>10:00</td><td>Open sword &amp; buckler pools start</td></tr>
+              <tr><td>11:30</td><td>Open sword &amp; buckler eliminations start</td></tr>
+              <tr><td>12:00</td><td>Lunch break</td></tr>
+              <tr><td>13:00</td><td>Open sidesword final matches</td></tr>
+              <tr><td>13:30</td><td>Open sword &amp; buckler final matches</td></tr>
+              <tr><td>14:00</td><td>Medal ceremony</td></tr>
+              <tr><td>20:00</td><td>Afterparty</td></tr>
+              <tr><td rowspan="12">Day 2</td><td>07:00</td><td>Registrations and gear-check</td></tr>
+              <tr><td>08:00</td><td>Women's longsword pools start</td></tr>
+              <tr><td>09:30</td><td>Women's longsword eliminations start</td></tr>
+              <tr><td>10:00</td><td>Open longsword pools start (first 4 pools)</td></tr>
+              <tr><td>11:30</td><td>Lunch break</td></tr>
+              <tr><td>12:30</td><td>Open longsword pools start (last 2 pools) &amp; Women's sidesword pools start</td></tr>
+              <tr><td>14:00</td><td>Open longsword eliminations start</td></tr>
+              <tr><td>14:30</td><td>Women's sidesword eliminations start</td></tr>
+              <tr><td>15:00</td><td>Women's sidesword final matches</td></tr>
+              <tr><td>15:30</td><td>Women's longsword final matches</td></tr>
+              <tr><td>16:00</td><td>Open longsword final matches</td></tr>
+              <tr><td>16:30</td><td>Medal ceremony</td></tr>
+            </tbody>
           </table>
           <p>Tournament schedule is an approximation and subject to change.</p>
         </div>
       </div>
+    <div id="background">
+
       <div id="background-scroller"></div>
     </div>
   </div>
